update profile and get profile
